--- a/timetable/pom.xml
+++ b/timetable/pom.xml
@@ -93,6 +93,10 @@
             <groupId>io.quarkus</groupId>
             <artifactId>quarkus-jdbc-postgresql</artifactId>
         </dependency>
+        <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-kubernetes-config</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>com.vladmihalcea</groupId>
