Run timetable service in Kubernetes
This commit adds the ability to run the timetable service inside a K8s
cluster.

--- a/timetable/pom.xml
+++ b/timetable/pom.xml
@@ -12,10 +12,10 @@
         <maven.compiler.target>11</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <quarkus-plugin.version>1.4.2.Final</quarkus-plugin.version>
+        <quarkus-plugin.version>1.5.0.Final</quarkus-plugin.version>
         <quarkus.platform.artifact-id>quarkus-universe-bom</quarkus.platform.artifact-id>
         <quarkus.platform.group-id>io.quarkus</quarkus.platform.group-id>
-        <quarkus.platform.version>1.4.2.Final</quarkus.platform.version>
+        <quarkus.platform.version>1.5.0.Final</quarkus.platform.version>
         <surefire-plugin.version>2.22.1</surefire-plugin.version>
         <openapi.generator.version>4.3.0</openapi.generator.version>
     </properties>
@@ -67,10 +67,6 @@
         </dependency>
         <dependency>
             <groupId>io.quarkus</groupId>
-            <artifactId>quarkus-container-image-docker</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>io.quarkus</groupId>
             <artifactId>quarkus-rest-client</artifactId>
         </dependency>
         <dependency>
@@ -101,10 +97,15 @@
             <groupId>io.quarkus</groupId>
             <artifactId>quarkus-container-image-jib</artifactId>
         </dependency>
+
         <dependency>
             <groupId>io.quarkus</groupId>
-            <artifactId>quarkus-kubernetes-config</artifactId>
+            <artifactId>quarkus-minikube</artifactId>
         </dependency>
+        <!--<dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-kubernetes-config</artifactId>
+        </dependency>-->
 
         <dependency>
             <groupId>com.vladmihalcea</groupId>
