--- a/timetable/src/main/resources/application.properties
+++ b/timetable/src/main/resources/application.properties
@@ -7,7 +7,7 @@ quarkus.swagger-ui.always-include=true
 quarkus.datasource.db-kind = postgresql
 quarkus.datasource.username = lukas
 quarkus.datasource.password=Cisco0
-quarkus.datasource.jdbc.url=jdbc:tracing:postgresql://postgres:5432/timetable
+quarkus.datasource.jdbc.url=jdbc:tracing:postgresql://postgresql-service:5432/timetable
 %dev.quarkus.datasource.jdbc.url=jdbc:tracing:postgresql://127.0.0.1:5432/timetable
 %test.quarkus.datasource.jdbc.url=jdbc:tracing:postgresql://127.0.0.1:5432/timetable
 quarkus.datasource.jdbc.driver=io.opentracing.contrib.jdbc.TracingDriver
@@ -19,3 +19,6 @@ quarkus.jaeger.service-name = timetable
 quarkus.jaeger.sampler-type = const
 quarkus.jaeger.sampler-param = 1
 quarkus.log.console.format = "%d{HH:mm:ss} %-5p traceId=%X{traceId}, spanId=%X{spanId}, sampled=%X{sampled} [%c{2.}] (%t) %s%e%n"
+
+quarkus.kubernetes.labels.app=timetable
+quarkus.kubernetes.labels.version=0.1.0
