Try to configure timetable service using K8s ConfigMaps

--- a/timetable/src/main/resources/application.properties
+++ b/timetable/src/main/resources/application.properties
@@ -1,8 +1,7 @@
 quarkus.http.port = 8082
-quarkus.http.cors=true
-quarkus.http.cors.origins=*
-
-quarkus.swagger-ui.always-include=true
+quarkus.http.cors = true
+quarkus.http.cors.origins = *
+quarkus.swagger-ui.always-include = true
 
 quarkus.datasource.db-kind = postgresql
 quarkus.datasource.username = lukas
@@ -22,3 +21,4 @@ quarkus.log.console.format = "%d{HH:mm:ss} %-5p traceId=%X{traceId}, spanId=%X{s
 
 quarkus.kubernetes.labels.app=timetable
 quarkus.kubernetes.labels.version=0.1.0
+%prod.quarkus.kubernetes-config.enabled=true
