--- a/timetable/pom.xml
+++ b/timetable/pom.xml
@@ -97,15 +97,14 @@
             <groupId>io.quarkus</groupId>
             <artifactId>quarkus-container-image-jib</artifactId>
         </dependency>
-
         <dependency>
             <groupId>io.quarkus</groupId>
             <artifactId>quarkus-minikube</artifactId>
         </dependency>
-        <!--<dependency>
+        <dependency>
             <groupId>io.quarkus</groupId>
             <artifactId>quarkus-kubernetes-config</artifactId>
-        </dependency>-->
+        </dependency>
 
         <dependency>
             <groupId>com.vladmihalcea</groupId>
