Add kubernetes configuration for booking service

--- a/booking/Dockerfile
+++ b/booking/Dockerfile
@@ -2,4 +2,4 @@ FROM adoptopenjdk/openjdk11:alpine
 RUN mkdir /opt/app
 COPY ./target/booking-0.jar /opt/app
 EXPOSE 8084
-CMD ["java", "-Dspring.profiles.active=docker", "-jar", "/opt/app/booking-0.jar"]
+CMD ["java", "-Dspring.profiles.active=kubernetes", "-jar", "/opt/app/booking-0.jar"]
