--- a/booking/src/main/resources/application-kubernetes.properties
+++ b/booking/src/main/resources/application-kubernetes.properties
@@ -7,7 +7,7 @@ spring.data.mongodb.username=lukas
 spring.data.mongodb.password=Cisco0
 spring.data.mongodb.authentication-database=admin
 opentracing.jaeger.enabled=true
-opentracing.jaeger.udp-sender.host=jaeger
+opentracing.jaeger.udp-sender.host=jaeger-service
 opentracing.jaeger.udp-sender.port=6831
 timetable.url=http://timetable-service:8082/
 bookingstatusupdate.interval=1800000
