--- a/gateway/src/main/resources/application.properties
+++ b/gateway/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 apigateway.path.timetable = /timetable/**
-apigateway.path.timetable.prefixlength = 1
 apigateway.path.booking = /booking/**
-apigateway.path.booking.prefixlength = 1
+
+springdoc.api-docs.groups.enabled = true
