--- a/timetable/src/main/resources/application.properties
+++ b/timetable/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 quarkus.http.port = 8082
 quarkus.http.cors=true
 quarkus.http.cors.origins=*
-
+quarkus.smallrye-openapi.path=/v3/api-docs/
 quarkus.swagger-ui.always-include=true
 
 quarkus.datasource.db-kind = postgresql
