--- a/kubernetes/jeager/jaeger-ui-service.yaml
+++ b/kubernetes/jeager/jaeger-ui-service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: jaeger-node-port-service
+  name: jaeger-ui-service
 spec:
   type: NodePort
   ports:
