Run multiple instances of the booking and timetable service
This commit adds the ability to run multiple parallel instances of the
booking and timetable service and have a load balancer distribute the
packages among the services.

--- a/booking/src/main/resources/application-kubernetes.properties
+++ b/booking/src/main/resources/application-kubernetes.properties
@@ -7,7 +7,7 @@ spring.data.mongodb.username=lukas
 spring.data.mongodb.password=Cisco0
 spring.data.mongodb.authentication-database=admin
 opentracing.jaeger.enabled=true
-opentracing.jaeger.udp-sender.host=jaeger-service
+opentracing.jaeger.udp-sender.host=jaeger-service-spring
 opentracing.jaeger.udp-sender.port=6831
-timetable.url=http://timetable-service:8082/
-bookingstatusupdate.interval=1800000
+timetable.url=http://timetable:8082/
+bookingstatusupdate.interval=3600000
