--- a/kubernetes/jaeger/jaeger-deployment.yaml
+++ b/kubernetes/jaeger/jaeger-deployment.yaml
@@ -19,6 +19,8 @@ spec:
           ports:
             - containerPort: 16686
             - containerPort: 6831
+              protocol: UDP
+            - containerPort: 14268
           envFrom:
             - configMapRef:
                 name: jaeger-config
