--- a/timetable/src/main/resources/application.properties
+++ b/timetable/src/main/resources/application.properties
@@ -12,13 +12,18 @@ quarkus.datasource.jdbc.url=jdbc:tracing:postgresql://postgresql-service:5432/ti
 %test.quarkus.datasource.jdbc.url=jdbc:tracing:postgresql://127.0.0.1:5432/timetable
 quarkus.datasource.jdbc.driver=io.opentracing.contrib.jdbc.TracingDriver
 quarkus.hibernate-orm.dialect = org.hibernate.dialect.PostgreSQLDialect
-quarkus.hibernate-orm.database.generation = drop-and-create
+quarkus.hibernate-orm.database.generation = update
+%dev.quarkus.hibernate-orm.database.generation = drop-and-create
+%test.quarkus.hibernate-orm.database.generation = drop-and-create
 %prod.quarkus.hibernate-orm.sql-load-script=import.sql
 
+quarkus.jaeger.endpoint = http://jaeger-service-quarkus:14268/api/traces
 quarkus.jaeger.service-name = timetable
 quarkus.jaeger.sampler-type = const
 quarkus.jaeger.sampler-param = 1
 quarkus.log.console.format = "%d{HH:mm:ss} %-5p traceId=%X{traceId}, spanId=%X{spanId}, sampled=%X{sampled} [%c{2.}] (%t) %s%e%n"
 
+quarkus.kubernetes.replicas=3
+quarkus.kubernetes.service-type=load-balancer
 quarkus.kubernetes.labels.app=timetable
 quarkus.kubernetes.labels.version=0.1.0
