Update configuration and scripts

--- a/timetable/src/main/resources/application.properties
+++ b/timetable/src/main/resources/application.properties
@@ -27,3 +27,5 @@ quarkus.kubernetes.replicas=3
 quarkus.kubernetes.service-type=load-balancer
 quarkus.kubernetes.labels.app=timetable
 quarkus.kubernetes.labels.version=0.1.0
+
+quarkus.container-image.group=timetable
