--- a/kubernetes/gateway/gateway-deployment.yaml
+++ b/kubernetes/gateway/gateway-deployment.yaml
@@ -18,3 +18,19 @@ spec:
           imagePullPolicy: "IfNotPresent"
           ports:
             - containerPort: 8081
+          readinessProbe:
+            periodSeconds: 10
+            timeoutSeconds: 3
+            failureThreshold: 3
+            successThreshold: 1
+            httpGet:
+              path: /actuator/health/readiness
+              port: 8081
+          livenessProbe:
+            periodSeconds: 60
+            timeoutSeconds: 3
+            failureThreshold: 3
+            successThreshold: 1
+            httpGet:
+              path: /actuator/health/liveness
+              port: 8081
