--- a/timetable/pom.xml
+++ b/timetable/pom.xml
@@ -106,6 +106,10 @@
             <groupId>io.quarkus</groupId>
             <artifactId>quarkus-kubernetes-config</artifactId>
         </dependency>-->
+        <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-smallrye-health</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>com.vladmihalcea</groupId>
