Authenticate requests to booking service using OAuth
This commit adds the ability to authenticate requests to the booking
service using OAuth with Okta as backend. While all requests previously
were unauthenticated, this commit enables authentication for requests
to the booking service and token forwarding from the gateway to the
booking service.

--- a/gateway/src/main/resources/application-development.yml
+++ b/gateway/src/main/resources/application-development.yml
@@ -19,6 +19,7 @@ spring:
         filters:
         - StripPrefix=1
         - CircuitBreaker=bookingCircuitBreaker
+        - TokenRelay=
       - id: openAPI
         uri: http://localhost:${server.port}/
         predicates:
