Publish booking status updates to AMQP broker
This commit adds the ability to publish booking status updates to an
AMQP broker running RabbitMQ. This is required for a later project that
sends email notifications to a customer.

--- a/booking/src/main/resources/application.properties
+++ b/booking/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 springdoc.packages-to-scan = eu.nighttrains.booking.rest
+
+spring.rabbitmq.publisher-confirm-type=correlated
+
+bookingstatusupdates.exchange-name = bookingstatusupdatesexchange
+bookingstatusupdates.queue.confirmation = bookingstatusupdatesqueue.confirmed
+bookingstatusupdates.queue.reservation = bookingstatusupdatesqueue.reserved
+bookingstatusupdates.queue.rejection = bookingstatusupdatesqueue.rejected
+bookingstatusupdates.routingkey.confirmed = bookingstatusupdates.confirmed
+bookingstatusupdates.routingkey.reserved = bookingstatusupdates.reserved
+bookingstatusupdates.routingkey.rejected = bookingstatusupdates.rejected
