Update Kubernetes deployments
This commit updates the Kubernetes deployments so that the
authentication and AMQP publisher feature work on a K8s cluster.

--- a/booking/.gitignore
+++ b/booking/.gitignore
@@ -32,4 +32,5 @@ build/
 
 # Okta credentials
 src/main/resources/application-security.properties
+src/main/resources/application-security-kubernetes.properties
 
