--- a/booking/src/main/resources/application-kubernetes.properties
+++ b/booking/src/main/resources/application-kubernetes.properties
@@ -1,4 +1,5 @@
 server.port=8084
+
 spring.application.name=booking
 spring.data.mongodb.host=mongodb-service
 spring.data.mongodb.port=27017
@@ -6,8 +7,13 @@ spring.data.mongodb.database=booking
 spring.data.mongodb.username=lukas
 spring.data.mongodb.password=Cisco0
 spring.data.mongodb.authentication-database=admin
+
+spring.rabbitmq.host=rabbitmq-service
+spring.rabbitmq.port=5672
+
 opentracing.jaeger.enabled=true
 opentracing.jaeger.udp-sender.host=jaeger-service-spring
 opentracing.jaeger.udp-sender.port=6831
+
 timetable.url=http://timetable:8082/
 bookingstatusupdate.interval=3600000
