--- a/gateway/.gitignore
+++ b/gateway/.gitignore
@@ -32,4 +32,5 @@ build/
 
 # Okta secrets
 src/main/resources/application-security.properties
+src/main/resources/application-security-kubernetes.properties
 
