Add Vert.x notification service

--- a/pom.xml
+++ b/pom.xml
@@ -12,5 +12,6 @@
         <module>timetable</module>
         <module>booking</module>
         <module>gateway</module>
+        <module>notification</module>
     </modules>
 </project>
