--- a/night_train_frontend/package.json
+++ b/night_train_frontend/package.json
@@ -27,7 +27,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "gen-timetable-api": "rm -rf ./src/api/timetable && openapi-generator generate -i ./api-docs/timetable.json --generator-name typescript-fetch -o ./src/api/timetable --config ./api-docs/timetable.config.json && cd ./src/api/timetable && yarn"
+    "gen-timetable-api": "rm -rf ./src/api/timetable && openapi-generator generate -i ./api-docs/timetable.json --generator-name typescript-fetch -o ./src/api/timetable --config ./api-docs/timetable.config.json && cd ./src/api/timetable && yarn",
+    "gen-booking-api": "rm -rf ./src/api/booking && openapi-generator generate -i ./api-docs/booking.json --generator-name typescript-fetch -o ./src/api/booking --config ./api-docs/booking.config.json && cd ./src/api/booking && yarn"
+
   },
   "eslintConfig": {
     "extends": "react-app"
