--- a/night_train_frontend/package.json
+++ b/night_train_frontend/package.json
@@ -3,23 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^7.2.1",
-    "@types/jest": "^24.9.1",
-    "@types/node": "^12.12.32",
-    "@types/react": "^16.9.27",
-    "@types/react-dom": "^16.9.5",
-    "@types/react-router-dom": "^5.1.3",
-    "bootstrap": "^4.4.1",
-    "moment": "^2.24.0",
+    "@testing-library/jest-dom": "^5.10.1",
+    "@testing-library/react": "^10.2.1",
+    "@testing-library/user-event": "^11.4.2",
+    "@types/jest": "^26.0.0",
+    "@types/node": "^14.0.13",
+    "@types/react": "^16.9.36",
+    "@types/react-dom": "^16.9.8",
+    "@types/react-router-dom": "^5.1.5",
+    "bootstrap": "^4.5.0",
+    "moment": "^2.26.0",
     "react": "^16.13.1",
-    "react-bootstrap": "^1.0.0",
-    "react-bootstrap-typeahead": "^5.0.0-alpha.1",
+    "react-bootstrap": "^1.0.1",
+    "react-bootstrap-typeahead": "5.0.0-rc.3",
     "react-dom": "^16.13.1",
-    "react-router-dom": "^5.1.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
-    "typescript": "^3.7.5",
+    "typescript": "^3.9.5",
     "timetable-api": "file:./src/api/timetable"
   },
   "scripts": {
