Use AOP for translating OpenFeign exceptions
This commit removes the need for the OpenFeign wrapper by translating a
NotFoundException of Feign into an application domain-specific
exception using AOP.

--- a/kubernetes/notification/notification-deployment.yaml
+++ b/kubernetes/notification/notification-deployment.yaml
@@ -9,6 +9,7 @@ spec:
       app: notification
   template:
     metadata:
+      name: notification-pod
       labels:
         app: notification
     spec:
