--- a/kubernetes/postgresql/postgresql-deployment.yaml
+++ b/kubernetes/postgresql/postgresql-deployment.yaml
@@ -9,6 +9,7 @@ spec:
       app: postgresql
   template:
     metadata:
+      name: postgresql-pod
       labels:
         app: postgresql
     spec:
