Document K8s integration for booking service

--- a/booking/src/main/resources/application-kubernetes.properties
+++ b/booking/src/main/resources/application-kubernetes.properties
@@ -16,4 +16,4 @@ opentracing.jaeger.udp-sender.host=jaeger-service-spring
 opentracing.jaeger.udp-sender.port=6831
 
 timetable.url=http://timetable:8082/
-bookingstatusupdate.interval=3600000
+bookingstatusupdate.interval=10000
