Document the K8s integration for the API gateway

--- a/gateway/src/main/resources/application-kubernetes.yml
+++ b/gateway/src/main/resources/application-kubernetes.yml
@@ -35,4 +35,4 @@ opentracing:
 cors:
   origins:
     webFrontend: "http://localhost:3000"
-    swaggerUI: "http://localhost:8081"
+    swaggerUI: "http://192.168.99.100:30272"
