--- a/gateway/Dockerfile
+++ b/gateway/Dockerfile
@@ -1,4 +1,4 @@
-FROM adoptopenjdk/openjdk11:alpine
+FROM adoptopenjdk/openjdk11:alpine-jre
 RUN mkdir /opt/app
 COPY ./target/gateway-0.jar /opt/app
 EXPOSE 8081
