--- a/notification/configuration.json
+++ b/notification/configuration.json
@@ -7,7 +7,8 @@
 		"password": "guest",
 		"confirmationQueueName": "bookingstatusupdatesqueue.confirmed",
 		"reservationQueueName": "bookingstatusupdatesqueue.reserved",
-		"rejectionQueueName": "bookingstatusupdatesqueue.rejected"
+		"rejectionQueueName": "bookingstatusupdatesqueue.rejected",
+		"webFrontendBaseUrl": "http://localhost:3000"
 	},
 	"email":
 	{
