--- a/night_train_frontend/package.json
+++ b/night_train_frontend/package.json
@@ -2,6 +2,7 @@
   "name": "night_train_frontend",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://192.168.99.100:30800/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.10.1",
     "@testing-library/react": "^10.2.1",
